(bug or design?) Texture paint mode. Clone tool brush: stencil texture do nothing #86060

Closed
opened 2021-02-27 21:15:23 +01:00 by Vyacheslav Kobozev · 6 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: (newest version of Blender that worked as expected)

Short description of error
As title said. Clone brush with texture as stencil still act like regular clone brush.
Expected: clone from stencil or disabled stencil option

2021-02-27_23-11-49.mp4

clonetool.blend

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GTX 660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: (newest version of Blender that worked as expected) **Short description of error** As title said. Clone brush with texture as stencil still act like regular clone brush. Expected: clone from stencil or disabled stencil option [2021-02-27_23-11-49.mp4](https://archive.blender.org/developer/F9848379/2021-02-27_23-11-49.mp4) [clonetool.blend](https://archive.blender.org/developer/F9848384/clonetool.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I would also say this is misleading.
As far as I can tell, the Texture specified in the Texture Panel is not used with the Clone tool at all (Texture Mask is still effective though).

(it is a bit of a different story in the Image Editor, the Clone tool works a little differently there since you have to choose a clone image there).

But yes, for 3D view projection painting, I would suggest the following for the Clone tool:

  • remove the Texture from viewport drawing
  • remove the Texture panel

Taking a step back, one could even argue that this is true for other tools as well (Smear, Soften, Mask, I am looking at you), so I am not sure if this is more of a Design decision or how to classify...

Will post a patch doing the above.

I would also say this is misleading. As far as I can tell, the Texture specified in the Texture Panel is not used with the Clone tool at all (Texture Mask is still effective though). (it is a bit of a different story in the Image Editor, the Clone tool works a little differently there since you have to choose a clone image there). But yes, for 3D view projection painting, I would suggest the following for the Clone tool: - remove the Texture from viewport drawing - remove the Texture panel Taking a step back, one could even argue that this is true for other tools as well (`Smear`, `Soften`, `Mask`, I am looking at you), so I am not sure if this is more of a Design decision or how to classify... Will post a patch doing the above.

This issue was referenced by afcfc6eb08

This issue was referenced by afcfc6eb0842b9208bde3e334e3113a73807f6be

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-03-28 10:50:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86060
No description provided.